# qu-prolog

./: INSTALL  LOGIN_CMDS.in  Makefile.in  PROFILE_CMDS.in  README  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.ac  configure.in  configure.in.bak  configure~
doc/man/man1/: qc.1  qem.1  ql.1  qp.1
doc/manual/: COVER.html  INDEX.html  MAIN.html  SEC1.html  SEC2.html  SEC3.html  SEC4.html  SEC5.html  TOC.html  main.ps
doc/user/: main.ps
examples/: README  consumer.ql  db.ql  linda_server.ql  monitor_gui  monitor_gui.in  producer.ql  router_monitor.ql  tcp_gui  tcp_gui.in  tcp_server.ql  template_gui  template_gui.in
examples/cc_icm/: Makefile  README  encode.cc  encode.h  icm_env.cc  icm_env.h  main.cc
prolog/compiler/: Makefile.in  compile.qs  compile_pred.qs  custom.qs  flatten.qs  index.qs  internal_form.qs  list_util.qs  pretrans.qs  pseudoinstr.qs  special.qs  write.qs
prolog/qc1/: Makefile.in  qc1.qs
prolog/qecat/: Makefile.in  qecat.qs
prolog/qg/: Makefile.in  qg.qs
prolog/qp/: Makefile.in  qp.qs
src/: Dependencies.heap  Dependencies.ipc  Dependencies.library  Dependencies.psi  Dependencies.qa  Dependencies.qdeal  Dependencies.qem  Dependencies.ql  Dependencies.template  Dependencies.thread  Dependencies.tkICM  Makefile.heap.in  Makefile.in  Makefile.ipc.in  Makefile.library.in  Makefile.psi.in  Makefile.qa.in  Makefile.qdeal.in  Makefile.qem.in  Makefile.ql.in  Makefile.qod.in  Makefile.template.in  Makefile.thread.in  Makefile.tkICM.in  QuProlog.h  acconfig.h  area_offsets.h  arithmetic.cc  arithmetic.h  arpa_inet.h  asm_int.h  asm_objects.h  asm_string_table.cc  asm_string_table.h  asm_template.cc  atom_table.cc  atom_table.h  atoms.cc  atoms.h  bind.cc  (+343 more)
src/wx/: pred.py  wxqp.py
src/xqp/: interact.cc  interact.h  main.cc  qpconfig.cc  qthelp.cc  qthelp.h  term.cc  xqp.cc  xqp.h  xqp.pro  xqpqueries.cc  xqpqueries.h
src/xqpdebug/: icm.h  icm_env.cc  icm_env.h  interact.cc  interact.h  main.cc  pedro_connection.cc  qpconfig.cc  xqpdebug.cc  xqpdebug.h  xqpdebug.pro  xqpdebug.pro.in
win_build/: README.win  configure  cp2win.bat  prepare_rel  start_win_release
win_build/src_makefiles/: Makefile
win_build/src_makefiles_in/: Makefile.in  Makefile.qem.in
